--- a/style.css
+++ b/style.css
@@ -23,15 +23,21 @@ body{
 .oragami{
     border-radius: 20px;
     background-color: #ffffff;
+
+    display: flex;
+    flex-wrap: wrap;
+    
     padding: 30px;
-    margin: 25px;
+    margin: 35px;
+    
     width: 310px;
     font-family: fantasy;
 }
 
+.bodyimg h2{color: rgb(167, 238, 25);}
 .bodyimg{
     font-family: sans-serif;
-    color: #c0c0c0;
+    color: wheat;
 }
 
 a:link{color: #ffffff;}
